--- a/site_de_floricultura/style.css
+++ b/site_de_floricultura/style.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box; 
 }
 
 /*-----------header------------*/
@@ -18,6 +19,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     height: 76px;
+    
 }
 
 nav img{
@@ -44,15 +46,41 @@ nav img{
 
 .banner{
     height: 100vh;
-    display: inline-block;
-    position: relative;
-    margin:0;
+    margin: 0;
     padding: 0;
-    display: block;
+    background-color: #F2B3BF;
+}
+
+.banner .content{
+    display: flex;
+    position: relative;
+    left: 25px; 
+    justify-content: space-around;
+    padding-top: 190px;
+}
+
+.text-box{
+    padding-top: 150px;
+    position: absolute;
+    right: 700px;
+    line-height: 55px;
+    text-align: center;
+    color:#b9224a;
+}
+
+.text-box h1{
+    font-family: 'Bitter';
+}
+
+.text-box h2{
+    font-family: 'MonteCarlo';
+    font-size: 80px;
 }
 
 .banner img{
-    width: 100%;
+    height: 500px;
+    position: relative;
+    left: 300px;
 }
 
 nav .fa{
@@ -60,6 +88,10 @@ nav .fa{
 }
 
 @media(max-width: 700px){
+    nav a img{
+        height: 200px;
+        width: 100%;
+    }
     .text-box h1{
         font-size: 25px;
     }
@@ -88,7 +120,42 @@ nav .fa{
         padding: 30px;
     }
     .banner{
-        height: 10vh;
+        max-height: 100vh;
+    }
+
+    .banner img{
+        height: 450px;
+        width: 100%;
+        left: ;
+    }
+    .banner .content{
+        display: flex;
+        position: relative;
+        left: 25px; 
+        padding-top: 190px;
+    }
+    .text-box{
+        padding-top: 150px;
+        position: absolute;
+        right: 700px;
+        line-height: 55px;
+        text-align: center;
+        color:#b9224a;
+    }
+    
+    .text-box h1{
+        font-family: 'Bitter';
+    }
+    
+    .text-box h2{
+        font-family: 'MonteCarlo';
+        font-size: 80px;
+    }
+    
+    .banner img{
+        height: 500px;
+        position: relative;
+        left: 300px;
     }
 }
 
