--- a/site_de_floricultura/style.css
+++ b/site_de_floricultura/style.css
@@ -13,13 +13,13 @@
 }
 
 nav{
-    background-color: #fceaed;
+    background: linear-gradient(to top, #f6cbc1, #ebb0ab );
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
     height: 76px;
-    
+    margin: 0;
 }
 
 nav img{
@@ -45,70 +45,86 @@ nav img{
 }
 
 .banner{
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-color: #F2B3BF;
-}
-
-.banner .content{
-    display: flex;
+    min-height: 100vh;
+    width: 100%;
+    background-image: url(img/fundo-de-textura-de-marmore-rosa-com-veios_125540-906.jpg);
+    background-size: cover;
+    background-position: center;
     position: relative;
-    left: 25px; 
-    justify-content: space-around;
-    padding-top: 190px;
+    margin-top: 0;
 }
 
 .text-box{
-    padding-top: 150px;
+    width: 90%;
+    color: rgb(155, 0, 59);
     position: absolute;
-    right: 700px;
-    line-height: 55px;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%,50%);
     text-align: center;
-    color:#b9224a;
+    line-height: 65px;
 }
 
 .text-box h1{
     font-family: 'Bitter';
+    font-size: 40px;
 }
 
 .text-box h2{
     font-family: 'MonteCarlo';
-    font-size: 80px;
-}
-
-.banner img{
-    height: 500px;
-    position: relative;
-    left: 300px;
+    font-size: 100px;
 }
 
 nav .fa{
     display: none;
 }
 
-@media(max-width: 700px){
+@media(max-width: 850px){
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
     nav a img{
         height: 200px;
         width: 100%;
     }
-    .text-box h1{
-        font-size: 25px;
+
+    .banner{
+        height: 80%;
     }
+
+    .banner .text-box{
+        width: 80%;
+        bottom: 30%;
+        top: 0;
+        line-height: 1;
+    }
+
+    .banner .text-box h1{
+        font-size: 20px;
+    }
+
+    .banner .text-box h2{
+        font-size: 75px;
+    }
+
     .nav-links ul li{
         display: block;
     }
+
     .nav-links{
         position: absolute;
-        background: #ffcbd4;
         height: 100vh;
         width: 200px;
         top: 0;
         right: -200px;
         text-align: left;
         z-index: 2;
-        transition: 1s;
+        transition: 0.5s;
     }
+
     nav .fa{
         display: block;
         color: #BF5E78;
@@ -116,46 +132,9 @@ nav .fa{
         margin: 10px;
         cursor: pointer;
     }
+
     .nav-links ul{
         padding: 30px;
-    }
-    .banner{
-        max-height: 100vh;
-    }
-
-    .banner img{
-        height: 450px;
-        width: 100%;
-        left: ;
-    }
-    .banner .content{
-        display: flex;
-        position: relative;
-        left: 25px; 
-        padding-top: 190px;
-    }
-    .text-box{
-        padding-top: 150px;
-        position: absolute;
-        right: 700px;
-        line-height: 55px;
-        text-align: center;
-        color:#b9224a;
-    }
-    
-    .text-box h1{
-        font-family: 'Bitter';
-    }
-    
-    .text-box h2{
-        font-family: 'MonteCarlo';
-        font-size: 80px;
-    }
-    
-    .banner img{
-        height: 500px;
-        position: relative;
-        left: 300px;
     }
 }
 
@@ -214,4 +193,49 @@ nav .fa{
     border-radius: 100%;
     height: 2px;
     margin-bottom: 30px;
+}
+
+@media(max-width: 850px){
+    .container{
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 95vh;
+    }
+
+    .container img{
+        height:250px;
+        margin-left: 0px;
+    }
+
+    .text{
+        text-align: center;
+        line-height: 30px;
+        width: 80%;
+        position: relative;
+        margin-right: 0;
+        color: #b9224a;
+    }
+
+    .container h1{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-family: 'MonteCarlo';
+        font-size: 30px;
+    }
+
+    .container h2{
+        margin-top: 5px;
+        margin-bottom: 5px;
+        font-family: 'Josefin Slab';
+        font-size: 20px;
+    }
+
+    .container hr{
+        margin-bottom: 5px;
+    }
+
+    .container p{
+        font-family: 'Bitter';
+        font-size: 14px;
+    }
 }
