--- a/site_de_floricultura/style.css
+++ b/site_de_floricultura/style.css
@@ -7,7 +7,7 @@
     box-sizing: border-box; 
 }
 
-/*-----------header------------*/
+/*-----------HEADER------------*/
 .header{
     min-height: 100vh;
     width: 100%;
@@ -140,7 +140,7 @@ nav .fa{
     }
 }
 
-/*------------------agradecimentos------------------*/
+/*------------------AGRADECIMENTOS------------------*/
 
 .container{
     background-color: #fceaed;
@@ -242,7 +242,7 @@ nav .fa{
     }
 }
 
-/*--------------Banner 2-------------*/
+/*--------------BANNER_2-------------*/
 .banner2{
     height: 400px;
     width: 100%;
@@ -305,7 +305,7 @@ nav .fa{
     }
 }
 
-/*--------------Fale Conosco-------------*/
+/*--------------FALE_CONOSCO-------------*/
 .faleconosco{
     background-color:#ebb0ab;
     height: 70vh;
@@ -313,6 +313,7 @@ nav .fa{
     text-align: center;
 }
 .faleconosco h1{
+    margin-top: 45px;
     margin-bottom: 45px;
     font-family: 'MonteCarlo';
     font-size: 50px;
@@ -328,7 +329,7 @@ nav .fa{
     left: 30%;
 }
 .left input{
-    margin-bottom: 45px;
+    margin-bottom: 5px;
     height: 35px;
     width: 230px;
     border: none;
@@ -337,9 +338,7 @@ nav .fa{
     padding: 5px;
 }
 .left label{
-    margin-bottom: 5px;
     font-family: 'Josefin Slab';
-    color: #a01a3e;
     color: #a01a3e;
     font-weight:bold;
 }
@@ -352,13 +351,13 @@ nav .fa{
 }
 .right textarea{
     margin-bottom: 3px;
-    height: 243px;
-    width: 290px;
+    height: 164px;
+    width: 230px;
     border: none;
     border-radius: 5px;
     resize: none;
     font-size: 15px;
-    padding: 20px;
+    padding: 5px;
     background: rgb(235, 235, 235);
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -369,12 +368,12 @@ nav .fa{
     font-weight:bold;
 }
 
-button{
+.right button{
     width: 65px;
     height: 30px;
     position: absolute;
-    right: 30%;
-    margin-top: 275px;
+    right: 0;
+    margin-top: 200px;
     background-color: #aa3957;
     border: none;
     border-radius: 3px;
@@ -384,18 +383,24 @@ button{
 @media(max-width: 850px){
     .faleconosco{
         padding: 0;
-        height: 100vh;
-        align-content: center;
-        justify-items: center;
+        height: 70vh;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        color: red;
     }
     .faleconosco h1{
         font-size: 40px;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
+        margin-top: 0;
     }
     .formulario{
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-items: center;
+        position: relative;
     }
     .left{
         display: flex;
@@ -405,9 +410,9 @@ button{
         left: 0;
     }
     .left input{
-        margin-bottom: 5px;
-        height: 35px;
-        width: 230px;
+        margin-bottom: 3px;
+        height: auto;
+        width: auto;
         border: none;
         border-radius: 5px;
         background: rgb(235, 235, 235);
@@ -423,8 +428,8 @@ button{
     .right textarea{
         font-family: Arial, Helvetica, sans-serif;
         margin-bottom: 3px;
-        height: 243px;
-        width: 230px;;
+        height: auto;
+        width: 190px;
         border: none;
         border-radius: 5px;
         resize: none;
@@ -439,8 +444,8 @@ button{
         color: #a01a3e;
         font-weight:bold;
     }
-
-    button{
+    
+    .faleconosco .right button{
         width: 65px;
         height: 30px;
         position: relative;
@@ -448,7 +453,39 @@ button{
         border: none;
         border-radius: 3px;
         color: #fff;
-        margin-top: 480px;
-        left: 156px;
+        margin-top: 5px;
+        right: 3px;
     }
+}
+
+/*-----------------------FOOTER----------------------*/
+footer{
+    height: 10vh;
+    text-align: center;
+    padding: 13px 0;
+}
+
+.icon .fa{
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+    color: #E79296;
+    font-size: 25px;
+}
+
+@media(max-width: 850px){
+    footer{
+        height: 10vh;
+        text-align: center;
+        padding: 9px 0;
+    }
+
+    .icon .fa{
+        margin: 0 13px;
+        cursor: pointer;
+        padding: 13px 0;
+        color: #E79296;
+        font-size: 25px;
+    }
+
 }
